--- a/main.html
+++ b/main.html
@@ -83,7 +83,7 @@
         <div class="container sb-content-inner"></div>
         <h1>Projects</h1>
 
-        <div class="listProjectItem" data-project='r'>
+        <div class="listProjectItem" data-project='r', data-url="https://github.com/yawhide/r">
           <div class='image-wrapper'>
             <img src='/img/r.png' width="250px">
           </div>
@@ -167,7 +167,7 @@
           </div>
         </div>
 
-        <div class="listProjectItem" data-project='surveyhide'>
+        <div class="listProjectItem" data-project='surveyhide' data-url="https://github.com/yawhide/mywebsite/tree/master/surveyhide">
           <div class='image-wrapper'>
             <img class='survey-hide-image' src='/img/surveyhide-mobile.png'>
           </div>
@@ -213,7 +213,7 @@
           </div>
         </div>
 
-        <div class="listProjectItem" data-project='bonified' data-url='/bonified'>
+        <div class="listProjectItem" data-project='bonified' data-url='https://github.com/yawhide/mywebsite/tree/master/bonified'>
           <div class='image-wrapper'>
             <img class='bonified-image' src='/img/bonified-mobile.png'>
           </div>
