Download resume from github

--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
       </div>
       <div class='col-md-4 internal'>
         <i class="fa fa-file-pdf-o"></i>
-        <a class='internal' href="/resume" target='_self'>My Resume</a>
+        <a class='internal' href="https://github.com/yawhide/yawhide.github.io/raw/master/stefan%20wojcik%20resume.pdf" target='_self'>My Resume</a>
       </div>
     </div>
   </div>
