--- a/index.html
+++ b/index.html
@@ -1,6 +1,16 @@
 <!doctype html>
 <html lang="en">
 <head>
+  <!-- Global site tag (gtag.js) - Google Analytics -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=UA-47105626-3"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'UA-47105626-3');
+</script>
+
   <meta charset="UTF-8">
   <title>Yaw Hide</title>
   <meta name="viewport" content="initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
