--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
     <div class='row'>
       <div class='col-md-4 internal'>
         <i class="fa fa-envelope-o"></i>
-        <a class="internal" href="mailto:stefan.rokitnitcki.wojcik@gmail.com">stefan.rokitnitcki.wojcik@gmail.com</a>
+        <a class="internal" href="mailto:stefan.rokitnicki.wojcik@gmail.com">stefan.rokitnicki.wojcik@gmail.com</a>
       </div>
       <div class='col-md-4 internal'>
         <i class="fa fa-github-alt"></i>
